8277213: CompileTask_lock is acquired out of order with MethodCompileQueue_lock